--- a/JavaScriptBasics.html
+++ b/JavaScriptBasics.html
@@ -28,6 +28,14 @@
                 <li><a href="">Quiz</a></li>
             </ul>
         </div>
+        
+        <div class="mainContent">
+            <h2>JavaScipt Basics</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Sunt sed impedit itaque id ducimus atque repellendus, iusto consectetur? 
+                Dolorum modi doloremque doloribus minima repellat quidem velit adipisci deleniti quos rem.
+            </p>
+        </div>
 
     </div>
 </body>
