Finalized code. Updating stylesheet

--- a/JavaScriptBasics.html
+++ b/JavaScriptBasics.html
@@ -35,8 +35,18 @@
                 Sunt sed impedit itaque id ducimus atque repellendus, iusto consectetur? 
                 Dolorum modi doloremque doloribus minima repellat quidem velit adipisci deleniti quos rem.
             </p>
+            <ul>
+                <li><a href="">Variable Declaration</a> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nemo minus unde facilis debitis libero iste odit corrupti dolorem neque illo nostrum distinctio modi aliquam tempore ut, temporibus quibusdam eligendi!</li>
+                <li><a href="">Variable Assignment</a> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nisi consequuntur rem harum corrupti perspiciatis distinctio minima hic, ut laboriosam adipisci, voluptatibus in ad repellendus! Exercitationem corrupti sint recusandae autem?</li>
+                <li><a href="">Data Types</a> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nisi consequuntur rem harum corrupti perspiciatis distinctio minima hic, ut laboriosam adipisci, voluptatibus in ad repellendus! Exercitationem corrupti sint recusandae autem?</li>
+                <li><a href="">Conditionals</a> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nisi consequuntur rem harum corrupti perspiciatis distinctio minima hic, ut laboriosam adipisci, voluptatibus in ad repellendus! Exercitationem corrupti sint recusandae autem?</li>
+                <li><a href="">Loops</a> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nisi consequuntur rem harum corrupti perspiciatis distinctio minima hic, ut laboriosam adipisci, voluptatibus in ad repellendus! Exercitationem corrupti sint recusandae autem?</li>
+                <li><a href="">Function</a> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita nisi consequuntur rem harum corrupti perspiciatis distinctio minima hic, ut laboriosam adipisci, voluptatibus in ad repellendus! Exercitationem corrupti sint recusandae autem?</li>
+            </ul>
         </div>
-
+        <div class="footer">
+            <p>For more useful information check out this url: <a href="">JavaScript!</a></p>
+        </div>
     </div>
 </body>
 </html>
